fix alignment

--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
 .app_win{
 	font-size: 1.3em;
+	background-color: #2C3F32;
 }
+
+.time_box{
+	font-size: 1.3em;
+	padding-top:0.5em;
+}
+
+.workspaces_box{
+	margin-left: 0.5em;
+	margin-right: 0.5em;
+}
+
+.app_bottom{
+	margin-right:0.5em;
+	margin-left: 0.3em;
+}
+
+.battery_box{
+	padding-bottom: 0.5em;
+}
+
